Fixed flickering of dialog boxes

--- a/jqdialog.css
+++ b/jqdialog.css
@@ -1,19 +1,20 @@
 body {
-	margin: 0px;
-	background: #ececec;
-	background-position: top center;
-	font-family: Arial;
-	font-size: 14px;
-	color: #333;
+  margin: 0px;
+  background: #f7f7f7;
+  font-family: 'Helvetica Neue', Helvetica, Arial;
+  font-size: 14px;
+  line-height: 22px;
+  color: #333;
 }
-		
+
 #main {
-	background: #fff;
-	margin: 30px auto 0 auto;
-	padding: 20px;
-	width: 900px;
-	
-	box-shadow: 0 0 10px #ddd;
+  background: #fff;
+  margin: 30px auto;
+  padding: 20px 30px;
+  width: 700px;
+
+  border: 1px solid #ccc;
+  box-shadow: inset 0 0 10px #eee, 0 0 3px #ddd;
 }
 
 .o {
